<resources>

    <string name="app_name">RTI Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_rti_calculator">RTI Calculator</string>
    <string name="wheelbase">Wheelbase</string>
    <string name="distance">Distance</string>
    <string name="calc">Calculate</string>
    <string name="rti">RTI</string>
    <string name="art_height">Articulation</string>
    <string name="settings_tittle">Settings</string>
    <string name="back_title">Back</string>
    <string name="exit_title">Exit</string>
    <string name="scout_wb">Scout</string>
    <string name="terra_wb">Terra</string>
    <string name="travelall_wb">Travelall</string>
    <string name="option_angle">Ramp Angle</string>
    <string name="save">Save</string>

</resources>