<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/wheelbase"
        android:inputType="numberDecimal"
        android:onClick="clearClickHandler"
        android:selectAllOnFocus="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:onClick="clearClickHandler"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:focusable="true"
        android:onClick="CalcClickHandler"
        android:text="@string/calc" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:editable="false"
        android:ems="10"
        android:text="@string/rti" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText3"
        android:editable="false"
        android:ems="10"
        android:text="@string/art_height" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="WbClickHandler"
        android:text="@string/scout_wb" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentRight="true"
        android:onClick="WbClickHandler"
        android:text="@string/terra_wb" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button3"
        android:onClick="WbClickHandler"
        android:text="@string/travelall_wb" />

</RelativeLayout>
